# edid-query

./: Cargo.toml  build.rs
example/hello-edid/: Cargo.toml
example/hello-edid/src/: main.rs
src/: lib.rs
